# bcr_nav2

bot/: CMakeLists.txt  README.md  package.xml
bot/config/: nav2_params.yaml
bot/launch/: gazebo.launch.py  gazebo_nav.launch.py
bot/map/: map.pgm  map.yaml
bot/rviz/: entire_setup.rviz  nav2.rviz
bot/urdf/: bcr_bot.xacro  gazebo.xacro
