<?xml version="1.0"?>
<package format="2">
	<name>bcr_bot</name>
	<version>0.5.0</version>
	<description>bcr_bot</description>

	<maintainer email="gaurav@blackcoffeerobotics.com">Gaurav Gupta</maintainer>
        <maintainer email="devanshu@blackcoffeerobotics.com">Devanshu Sharma</maintainer>
	<license>(C) Black Coffee Robotics</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
